scripts/tests/errors/err_self_inheritance.bu
// Test: class inheriting from itself
// Expected: compile error

class Ouroboros : Ouroboros
    def init()
    end
end
